feat: add sponsorship endpoints
